# fof8-scout

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_REFACTORING_PLAN.md  GEMINI.md  OLD_IGNORE_AGENT_REFACTORING_PLAN.md  README.md  dvc.yaml  pyproject.toml
.devcontainer/experimentation/: Dockerfile  devcontainer.json  setup.sh
.dvc/: config
docs/: architecture_extensions.md  codebase_rework_handoff.md  draft_model_finish_line_plan.md  draft_value_target_strategy.md  economic_targets_architecture_cleanup_plan.md  economic_targets_refactor_handoff.md  multi_universe_data_split_handoff.md  multi_universe_generation_plan.md  phase4_experiment_matrix_implementation_plan.md  pr_review_handoff_plan.md  target_family_split_plan.md  train_decomposition_ideas.md  universe_generalization_alignment.md
docs/experiments/: draft_utility_target_exploration.md  mlp_talent_regressor_experiment_report.md
docs/plans/: draft_utility_modeling_plan.md  mlp_talent_regressor_experiment_plan.md
fof8-core/: README.md  pyproject.toml
fof8-core/scratch/: check_polars_optimization.py
fof8-core/src/fof8_core/: __init__.py  awards.py  features.py  loader.py  loader_team_resolution.py  schemas.py  targets.py  targets_replacements.py
fof8-core/src/fof8_core/features/: __init__.py  constants.py  draft_class.py  position_masks.py
fof8-core/src/fof8_core/targets/: __init__.py  approximate_value.py  awards.py  career.py  composite.py  draft_outcomes.py  draft_utility.py  economic.py  financial.py  registry.py  talent.py
fof8-core/tests/: conftest.py  test_composite_targets.py  test_data_pipelines.py  test_draft_outcome_targets.py  test_draft_utility_targets.py  test_economic_targets.py  test_loader.py  test_position_masks.py  test_talent_targets.py  test_targets_registry.py
fof8-experimentation/: DATA_REFERENCE.md  ML_MODELING_THOUGHTS.md  README.md  THOUGHTS_ON_POSITIONAL_VERSATILITY.md  dvc.yaml  pyproject.toml
fof8-experimentation/conf/: economic_pipeline.yaml  transform.yaml
fof8-experimentation/notebooks/: cap_adjusted_earnings.ipynb  replacement_strategies.ipynb
fof8-experimentation/scratch/: check_awards.py  check_future_features.py  check_gpu.py  debug_dvc_remote.py  debug_dvc_v3.py  debug_optuna.py  list_awards.py  plot_probs.py  test_dvc.py  test_dvc_chdir.py  test_enum_join.py  test_feature_filtering.py  validate_salary.py  verify_gpu_wrappers.py  verify_masking.py
fof8-gen/: README.md  convert_all_csvs.py  pyproject.toml
fof8-gen/data/: raw.dvc
fof8-gen/src/fof8_gen/: automation.py  automation_runner.py  metadata.py  screen.py  snapshot.py  workflows.py
fof8-gen/templates/: metadata.example.yaml
fof8-gen/tests/: test_automation_cli.py  test_automation_runner.py  test_metadata.py  test_screen.py
fof8-ml/: DATA_REFERENCE.md  ML_MODELING_THOUGHTS.md  README.md  THOUGHTS_ON_POSITIONAL_VERSATILITY.md  pyproject.toml
fof8-ml/conf/data/: fof8_base.yaml
fof8-ml/conf/hparams_search/: full_pipeline.yaml  reg_gamma.yaml
fof8-ml/notebooks/: career_trajectories.ipynb  merit_target_evaluation.ipynb  pre_draft_player_information_testing.ipynb  rookie_grade_normality.ipynb  stage1_oof_results.csv  stage_1_classifier_evaluation.ipynb
fof8-ml/scratch/: check_awards_columns.py  check_awards_cumulative.py  check_columns.py  check_future_features.py  check_ranges.py  check_salary_units.py  debug_dvc.py  debug_dvc_remote.py  debug_optuna.py  test_dvc_abs.py  test_dvc_outs.py  test_dvc_rel.py  test_enum_join.py  validate_data_reference.py  verify_awards.py
fof8-ml/src/fof8_ml/: inference.py  timing.py  train_pipeline.py
fof8-ml/src/fof8_ml/data/: __init__.py  cache.py  career_threshold_dataset.py  categorical.py  dataset.py  economic_dataset.py  features.py  preprocessing.py  schema.py
fof8-ml/src/fof8_ml/evaluation/: complete_model.py  metrics.py  plotting.py
fof8-ml/src/fof8_ml/models/: __init__.py  base.py  calibration.py  catboost_wrapper.py  factory.py  registry.py  sklearn_wrapper.py  xgboost_wrapper.py
fof8-ml/src/fof8_ml/orchestration/: __init__.py  classifier.py  complete_model.py  data_loader.py  evaluator.py  experiment_logger.py  experiment_matrix.py  phase4_matrix.py  pipeline_runner.py  pipeline_types.py  progress.py  regressor.py  stage1_classifier.py  stage2_regressor.py  sweep_manager.py  trainer.py
fof8-ml/src/fof8_ml/reporting/: __init__.py  matrix_diagnostics.py  matrix_report.py  phase4_diagnostics.py  phase4_report.py
fof8-ml/tests/: test_batch_inference_role_resolution.py  test_batch_inference_stage_resolution.py  test_cache.py  test_catboost_wrapper.py  test_complete_model.py  test_data_loader_cache.py  test_dataset.py  test_evaluator.py  test_experiment_logger.py  test_experiment_matrix.py  test_feature_ablation_resolution.py  test_feature_schema.py  test_matrix_diagnostics.py  test_metrics.py  test_model_factory.py  test_phase4_diagnostics.py  test_phase4_matrix.py  test_preprocessing.py  test_progress_reporting.py  test_regressor.py  test_role_naming_and_sweep_manager.py  test_sklearn_wrapper.py  test_stage_naming_and_sweep_manager.py
notebooks/: cap_adjusted_earnings.ipynb  career_trajectories.ipynb  classifier_calibration.ipynb  draft_utility_data_audit.ipynb  draft_utility_empirical_value_model.ipynb  merit_target_evaluation.ipynb  positive_dpo_distribution.ipynb  pre_draft_player_information_testing.ipynb  regressor_loss_function_analysis.ipynb  replacement_strategies.ipynb  rookie_grade_normality.ipynb  stage_1_classifier_evaluation.ipynb  talent_position_economic_value_exploration.ipynb  talent_target_position_distributions.ipynb
pipelines/: batch_inference.py  evaluate_complete_model.py  evaluate_regressor_sweep_complete_correlation.py  export_matrix_diagnostics.py  export_matrix_report.py  export_phase4_diagnostics.py  export_phase4_report.py  process_features.py  run_experiment_matrix.py  run_phase4_matrix.py  train.py  train_classifier.py  train_regressor.py
pipelines/conf/: README.md  classifier_pipeline.yaml  (+9 more)
scripts/: check_gpu.py  plot_probs.py  validate_data_reference.py  verify_gpu_wrappers.py
(+86 files in other folders)
