[project]
name = "fof8-core"
version = "0.1.0"
description = "Core domain logic, data processing, and shared utilities for the FOF8 Scout monorepo."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.0.0"
]

[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[tool.uv]
package = true
