[project]
name = "fof8-ml"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=2.4.4,<3",
    "scipy>=1.17.1,<2",
    "xgboost>=3.2.0,<4",
    "lightgbm>=4.6.0,<5",
    "hydra-core>=1.3.2,<2",
    "mlflow>=3.11.1,<4",
    "fof8-core",
    "scikit-learn>=1.8.0,<2",
    "hydra-optuna-sweeper>=1.1.2,<2",
    "catboost>=1.2.10,<2",
    "shap>=0.51.0",
    "torch>=2.11.0,<3",
    "torchvision>=0.26.0,<1",
    "optuna==4.8.0",
    "sqlalchemy<2.0.0",
    "alembic>=1.6.5",
    "dagshub>=0.7.0,<1",
    "dvc[s3]>=3.67.1,<4",
]

[dependency-groups]
notebook = [
    "jupyter>=1.1.1,<2",
]
viz = [
    "altair>=6.1.0,<7",
    "seaborn>=0.13.2,<1",
    "hvplot>=0.12.2,<1",
    "bokeh>=3.9.0,<4",
    "panel>=1.8.10,<2",
    "jupyter-bokeh>=4.0.5,<5",
]

[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fof8_ml"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
fof8-core = { workspace = true }
